buildscript {
    repositories {
        google()
        mavenCentral()
    }

    dependencies {
        classpath 'com.android.tools.build:gradle:8.13.0'
        //classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
    }
}

repositories {
    google()
    mavenCentral()
}

apply plugin: 'com.android.library'
//apply plugin: 'com.github.dcendents.android-maven'
apply from: 'versioning.gradle'

version = "1.6.3"

group = "com.nabto.android"

android {
    namespace "com.nabto.api"
    compileSdkVersion 36
    //buildToolsVersion "28.0.3"

    sourceSets{
        main {
            java {
                srcDirs += ['src/main/jniJava']
            }
        }
    }

    defaultConfig {
        minSdkVersion 21
        targetSdkVersion 36
        versionCode buildVersionCode()
        versionName buildVersionName()
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        ndk {
            // Specifies the ABI configurations of your native
            // libraries Gradle should build and package with your app.
            abiFilters 'x86', 'x86_64', 'armeabi-v7a', 'arm64-v8a'
        }
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
}

dependencies {
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
}



tasks.withType(Test) {
    systemProperty "java.library.path", System.getProperty('java.library.path')
    jvmArgs += ['--add-opens', 'java.base/java.lang=ALL-UNNAMED', '--add-opens', 'java.base/java.io=ALL-UNNAMED', '--add-opens', 'java.base/java.nio.file=ALL-UNNAMED', '--add-opens', 'java.base/java.util=ALL-UNNAMED']
}

task showVersion() {
    println 'VersionName: ' + buildVersionName()
    println 'VersionCode: ' + buildVersionCode()
}

// install {
//     repositories.mavenInstaller {
//         pom {
//             project {
//                 packaging 'aar'

//                 name 'com.nabto.android:nabto-api'
//                 description = 'Nabto Client API for Android'
//                 url 'https://github.com/nabto/android-client-api'

//                 licenses {
//                     license {
//                         name 'The Apache Software License, Version 2.0'
//                         url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
//                     }
//                 }

//                 scm {
//                     connection 'https://github.com/nabto/android-client-api.git'
//                     developerConnection 'https://github.com/nabto/android-client-api.git'
//                     url 'https://github.com/nabto/android-client-api'
//                 }
//             }
//         }
//     }
// }

// tasks.withType(Javadoc) {
//     options.addStringOption('Xdoclint:none', '-quiet')
//     options.addStringOption('encoding', 'UTF-8')
//     options.addStringOption('charSet', 'UTF-8')
// }

// task sourcesJar(type: Jar) {
//     from android.sourceSets.main.java.srcDirs
//     classifier = 'sources'
// }

// task javadoc(type: Javadoc) {
//     options.addStringOption('Xdoclint:none')
//     source = android.sourceSets.main.java.srcDirs
//     classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
// }

// task javadocJar(type: Jar, dependsOn: javadoc) {
//     classifier = 'javadoc'
//     from javadoc.destinationDir
// }

// artifacts {
//     archives javadocJar
//     archives sourcesJar
// }
